--- a/prj/vs2019/pomodoro.vcxproj
+++ b/prj/vs2019/pomodoro.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="..\..\ext\raylib\src\rnet.h" />
     <ClInclude Include="..\..\ext\raylib\src\utils.h" />
     <ClInclude Include="..\..\ext\raylib\src\uwp_events.h" />
+    <ClInclude Include="..\..\src\types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
