'borrowed' sounds from pomotroid; a bit of cleanup

--- a/prj/vs2019/pomodoro.vcxproj.filters
+++ b/prj/vs2019/pomodoro.vcxproj.filters
@@ -156,5 +156,6 @@
     <ClInclude Include="..\..\ext\stb\stretchy_buffer.h">
       <Filter>stb</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\main.h" />
   </ItemGroup>
 </Project>
