--- a/prj/vs2019/pomodoro.vcxproj
+++ b/prj/vs2019/pomodoro.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="..\..\ext\raylib\src\utils.h" />
     <ClInclude Include="..\..\ext\raylib\src\uwp_events.h" />
     <ClInclude Include="..\..\ext\stb\stretchy_buffer.h" />
+    <ClInclude Include="..\..\src\main.h" />
     <ClInclude Include="..\..\src\pomodoro.h" />
     <ClInclude Include="..\..\src\types.h" />
   </ItemGroup>
